antigen-macros/tests/ui/empty_name.stderr
error: #[antigen] `name` cannot be empty
 --> tests/ui/empty_name.rs:7:18
  |
7 | #[antigen(name = "", fingerprint = "x")]
  |                  ^^
